# 51045-advanced-cpp

./: README.md
lec_11_files/: CMakeLists.txt  hw11-2.md  hw11-4.md  make_unique_nothrow.h  my_promise.h  output.txt  regex_hw.cpp  test.cpp  wind.cpp
lec_12_files/: CMakeLists.txt  hw12-2.h  hw12-4.h  is_convertible.h  is_convertible_old.h  remove_all_pointers.h  test.cpp  type_printer.h
lec_13_files/: CMakeLists.txt  HW_Traits.h  HW_traits.cpp  Tuple.h  TypePrinter.cpp  hw13_1.h  hw13_2.h  hw13_3.h  hw13_3.md  outer_product.cpp  test.cpp  variadic_examples.h
lec_14_files/: Array_Outer_Product.cpp  CMakeLists.txt  DistributedCounter4.h  DistributedCounterTest4.cpp  factory.cpp  factory.h  flex_factory.h  hw14_1.cpp  hw14_2-1.cpp  hw14_3.md  test.cpp  variadic_examples.cpp  variadic_examples.h
lec_15_files/: CMakeLists.txt  advanced_factory.h  advanced_trains.h  factory.h  hw15_1.cpp  hw15_1.md  hw15_2.cpp  hw15_2.h  train_factory.cpp  trains.h  variadic_examples.h
lec_16_files/: AnimalConcepts.cpp  AnimalOO.cpp  AnimalStaticPoly.cpp  CMakeLists.txt  Iterator_overload.cpp  VariantFactory.cpp  hw16_1.cpp  hw16_1.h  hw16_2.md  hw16_3.md  hw16_4.cpp  hw16_5_1.cpp  optimized_copy.h  variadic_examples.h
lecture10/lec_10_files/: CMakeLists.txt  hw10-1.cpp  hw10-2.cpp  hw10-3_answer.md  hw10-3_thought.md  my_promise_atomic.cpp  my_promise_atomic.h
